<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_post_banner">Recent entries</string>
    <string name="description_new_post_banner">Load recent entries</string>
    <string name="post_clear">Clear</string>
    <string name="photo_error">Photo error</string>
    <string name="feed_tittle">Feed</string>
    <string name="new_post">New Post</string>
    <string name="new_image">Image</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_now">Login now</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="is_blank">Login or password is blank</string>
    <string name="invalid_login_or_password">Invalid login or password</string>
    <string name="fragment_login">Log into your account</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="log_out_of_your_account">Log out of your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logged_out_of_your_account">You have logged out of your account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">Clear</string>
    <string name="registration_button">Sign up</string>
    <string name="avatar">Avatar</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="please_log_in_to_your_account">Please log in to your account</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="login_exit">You are login exit</string>
    <string name="invalid_password">Invalid password</string>
    <string name="empty_field">It is necessary to fill in all fields</string>
    <string name="successful_registration">Successful registration</string>
    <string name="preview_avatar">Preview avatar</string>
    <string name="choose">Choose</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="pass_check">Password check</string>
    <string name="match_passwords">Passwords must match</string>
    <string name="notification_new_post">User %1$s published new post:</string>
    <string name="notification_default">New notification from NMedia</string>

</resources>