<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.nmedia.activity.FeedFragment"
        android:label="@string/feed_tittle"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_feedFragment_to_newPostFragment"
            app:destination="@id/newPostFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_feedFragment_to_imageFragment"
            app:destination="@id/imageFragment" />
        <action
            android:id="@+id/action_feedFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_feedFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.nmedia.activity.NewPostFragment"
        android:label="@string/new_post"
        tools:layout="@layout/fragment_new_post" />
    <fragment
        android:id="@+id/imageFragment"
        android:name="ru.netology.nmedia.activity.ImageFragment"
        android:label="@string/new_image"
        tools:layout="@layout/fragment_image" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="ru.netology.nmedia.activity.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registrationFragment"
        android:name="ru.netology.nmedia.activity.RegistrationFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_registration" />
</navigation>